...
  void Function(int)? onItemTapped;

  CustomNavRail({
    Key? key,
    required this.selectedIndex,
    required this.onItemTapped,
  }) : super(key: const Key("NavigationRail"));

  @override
  Widget build(BuildContext context) {
    return NavigationRail(
      selectedIndex: selectedIndex,
      groupAlignment: -0.95,
...
