...
class GameInfoPageTablet extends StatelessWidget {
  String selectedGame;

  GameInfoPageTablet({
    Key? key,
    required this.selectedGame,
  }) : super(key: const Key("TabletQuizPage"));

  @override
  Widget build(BuildContext context) {
    final pages = [
      GameInfoScreenTablet(
        key: Key("gameInfoPageA"),
...
